# political_data_peru

./: .env.example  .gitignore  Dockerfile  Instrucciones.md  README.md  docker-compose.yml  pyproject.toml
backend/: README.md
backend/src/: main.py
backend/src/api/: candidates.py  health.py  osce.py
backend/src/config/: cache.py  settings.py
backend/src/repositories/: parquet_repository.py
backend/src/schemas/: candidates.py  osce.py
backend/src/services/: candidate_service.py
data/: README.md
frontend/: README.md  smoke_test.html
infrastructure/: ACTUALIZACION_OSCE.md  README.md
notebooks/: README.md
reports/: README.md
src/: README.md  main.py
src/analytics/: metrics.py  risk_engine.py
src/entity_resolution/: matching.py  vector_store.py
src/ingestion/: deputy_scraper.py  osce_scraper.py  parliament_scraper.py  presidential_scraper.py  scrapers_base.py  senator_scraper.py  test_scraper.py
src/models/: entities.py
src/normalization/: cleaners.py  orchestrator.py  standards.py
src/utils/: README.md  audit.py  logger.py
src/validation/: schemas.py
tests/: README.md  test_deputy_scraper.py  test_jne_smoke.py  test_osce_scraper.py  test_osce_smoke.py  test_parliament_scraper.py  test_presidential_scraper.py  test_senator_scraper.py
