[tool.poetry]
name = "political-data-peru"
version = "0.1.0"
description = "Plataforma analítica para el seguimiento y análisis de datos políticos en Perú"
authors = ["Joaquin Alvarado <alvaradocjosorio@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
polars = "^0.18.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.0"
pydantic = "^2.0.0"
tenacity = "^8.2.0"
httpx = "^0.24.0"
sentence-transformers = "^2.6.0"
faiss-cpu = "^1.8.0"
fastapi = "^0.110.0"
uvicorn = {version = "^0.29.0", extras = ["standard"]}
cachetools = "^5.3.0"
pydantic-settings = "^2.2.0"
rapidfuzz = "^3.0.0"
openpyxl = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.25.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
ruff = "^0.1.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"